SubVersion: $Id$

Log:

- 10/06/2007, version 1.0.6: roms
	- fixed sending of TIG files: set model as TI84P_USB to enable UTF8 conversion

- 16/04/2007, version 1.0.5: kevin
	- requires glib >= 2.6.0 rather than 2.4.0 because libticonv requires
	  it anyway

- 23/02/2007, version 1.0.4: roms
	- enabled i18n

- 08/12/2006, version 1.0.3:
	- added new values to FileClass enumeration (os, app and tib) and 
	added the following convenient functions: 
		tifiles_file_is_os and tifiles_file_is_app.
	- added tifiles_file_test function which was planned for a while.
	- fixed tifiles_file_write_tigroup which deleted the output file!
	- fixed tifiles_file_test (some copy&paste errors)
	- added missing type (TI83_ASM)
	- implemented matching check for TiGroup in tifiles_file_test
	
- 12/11/2006, version 1.0.2:
	- don't check device_type if data_type is TI89_LICENSE, old 89u files 
	use DEVICE_TYPE_73 (kevin)
	
- 21/09/2006, version 1.0.1:
	- fixed miniunz.c and minizip.c trying to include DOS/Win32 headers 
	under OS X (kevin)
	- changed TIEXPORT into TIEXPORT2
	- again, disabled file checksum verification
	
- 17/09/2006, tagged as version 1.0.0: roms
	- added support for TILIBS_DEPRECATED (exports symbols which have 
	been tagged as deprecated)
	
- 16/09/2006, version 0.2.9: roms
	- added hw_id field to FlashContent structure

- 08/09/2006, version 0.2.8: roms
	- fixed tifiles_ve_dup
	- fixed grouped.c: check for NULL pointer
	- tigroup.c: use #ifndef __WIN32__ instead of #ifdef __LINUX__ to 
	check for strcasecmp vs. stricmp (kevin)
	- tigroup.c: fixed code typos (missing asterisk, m instead of n)(kevin)
	- fixed computation of checksum with TI8x files
	- fixed tigroup.c: check for NULL pointer
	- check for device/data type in FLASH file 

- 25/08/2006, version 0.2.7: roms
	- checked with Valgrind, tested and validated.
	
- 17/08/2006, version 0.2.6: roms
	- added grouping/ungrouping support for TiGroup (eg tigroup.c provides the same API as grouped.c)