@@ -45,11 +45,11 @@ const char *TI83_CONST[TI83_MAXTYPES + 1][4] =
   {"", "83?", "Unknown", N_("Unknown")},
   {"", "83?", "Unknown", N_("Unknown")},
   {"CPLX", "83c", "Complex", N_("Complex")},
+  {"", "83?", "Unknown", N_("Unknown")},
+  {"", "83?", "Unknown", N_("Unknown")},
+  {"WINDW", "83w", "Window", N_("Window Setup")},
   {"ZSTO", "83z", "Zoom", N_("Zoom")},
-  {"TAB", "83t", "Table Setup", N_("Table Setup")},
-  {"", "83?", "Unknown", N_("Unknown")},
-  {"", "83?", "Unknown", N_("Unknown")},
-  {"", "83?", "Unknown", N_("Unknown")},
+  {"TABLE", "83t", "Table Setup", N_("Table Setup")},
   {"", "83?", "Unknown", N_("Unknown")},
   {"BKUP", "83b", "Backup", N_("Backup")},
   {"", "83?", "Unknown", N_("Unknown")},
